src/app/component/snapshots/jedit__app__component__workspace__test__render_append_after_into_object_test-4.snap
---
source: src/app/component/workspace.rs
expression: "stateful_render_to_string(&worktree, &mut state)"
---
"┌Tree──────────────────────┐┌Preview───────────────────────────────────────────┐"
"│  root                   ↑││  1 {                                             │"
"│  └─ web-app             ║││  2   "cofaxCDS": "/",                            │"
"│     ├─ servlet          ║││  3   "cofaxEmail": "/cofaxutil/aemail/*",        │"
"│     ├─ new_key          ║││  4   "cofaxAdmin": "/admin/*",                   │"
"│>    ├─ servlet-mapping  █││  5   "fileServlet": "/static/*",                 │"
"│     └─ taglib           █││  6   "cofaxTools": "/tools/*"                    │"
"│                         █││  7 }                                             │"
"│                         █││                                                  │"
"│                         █││                                                  │"
"│                         █││                                                  │"
"│                         █││                                                  │"
"│                         █││                                                  │"
"│                         █││                                                  │"
"│                         █││                                                  │"
"│                         █││                                                  │"
"│                         █││                                                  │"
"│                         ║││                                                  │"
"│                         ↓││                                                  │"
"└──────────────────────────┘└──────────────────────────────────────────────────┘"
