src/app/component/snapshots/jedit__app__component__workspace__test__render_append_after_into_object_test-5.snap
---
source: src/app/component/workspace.rs
expression: "stateful_render_to_string(&worktree, &mut state)"
---
"┌Tree──────────────────────┐┌Preview───────────────────────────────────────────┐"
"│  root                   ↑││  1 {                                             │"
"│  └─ web-app             ║││  2   "taglib-uri": "cofax.tld",                  │"
"│     ├─ servlet          ║││  3   "taglib-location": "/WEB-INF/tlds/cofax.tl  │"
"│     ├─ new_key          ║││  4 }                                             │"
"│     ├─ servlet-mapping  █││                                                  │"
"│>    └─ taglib           █││                                                  │"
"│                         █││                                                  │"
"│                         █││                                                  │"
"│                         █││                                                  │"
"│                         █││                                                  │"
"│                         █││                                                  │"
"│                         █││                                                  │"
"│                         █││                                                  │"
"│                         █││                                                  │"
"│                         █││                                                  │"
"│                         █││                                                  │"
"│                         █││                                                  │"
"│                         ↓││←█████████████████████████████████████████████══→ │"
"└──────────────────────────┘└──────────────────────────────────────────────────┘"
