src/app/component/snapshots/jedit__app__component__workspace__test__render_delete_large_preview_test.snap
---
source: src/app/component/workspace.rs
expression: "stateful_render_to_string(&worktree, &mut state)"
---
"┌Tree──────────────────────┐┌Preview───────────────────────────────────────────┐"
"│> root                   ↑││  1 {                                             │"
"│  --web-app              █││  2   "web-app": {                                │"
"│  ----servlet-mapping    █││  3     "servlet-mapping": {                      │"
"│  ----taglib             █││  4       "cofaxCDS": "/",                        │"
"│                         █││  5       "cofaxEmail": "/cofaxutil/aemail/*",    │"
"│                         █││  6       "cofaxAdmin": "/admin/*",               │"
"│                         █││  7       "fileServlet": "/static/*",             │"
"│                         █││  8       "cofaxTools": "/tools/*"                │"
"│                         █││  9     },                                        │"
"│                         █││ 10     "taglib": {                               │"
"│                         █││ 11       "taglib-uri": "cofax.tld",              │"
"│                         █││ 12       "taglib-location": "/WEB-INF/tlds/cofa  │"
"│                         █││ 13     }                                         │"
"│                         █││ 14   }                                           │"
"│                         █││ 15 }                                             │"
"│                         ║││                                                  │"
"│                         ║││                                                  │"
"│                         ↓││←██████████████████████████████████████████═════→ │"
"└──────────────────────────┘└──────────────────────────────────────────────────┘"
