src/app/component/snapshots/jedit__app__component__workspace__test__render_delete_preview_test.snap
---
source: src/app/component/workspace.rs
expression: "stateful_render_to_string(&worktree, &mut state)"
---
"┌Tree──────────────────────┐┌Preview───────────────────────────────────────────┐"
"│  root                   ↑││  1 {                                             │"
"│  --web-app              ║││  2   "cofaxCDS": "/",                            │"
"│> ----servlet-mapping    ║││  3   "cofaxEmail": "/cofaxutil/aemail/*",        │"
"│  ----taglib             █││  4   "cofaxAdmin": "/admin/*",                   │"
"│                         █││  5   "fileServlet": "/static/*",                 │"
"│                         █││  6   "cofaxTools": "/tools/*"                    │"
"│                         █││  7 }                                             │"
"│                         █││                                                  │"
"│                         █││                                                  │"
"│                         █││                                                  │"
"│                         █││                                                  │"
"│                         █││                                                  │"
"│                         █││                                                  │"
"│                         █││                                                  │"
"│                         █││                                                  │"
"│                         █││                                                  │"
"│                         ║││                                                  │"
"│                         ↓││                                                  │"
"└──────────────────────────┘└──────────────────────────────────────────────────┘"
