src/app/component/snapshots/jedit__app__component__workspace__test__render_edit_error_long_message_test.snap
---
source: src/app/component/workspace.rs
expression: "stateful_render_to_string(&worktree, &mut WorkTreeState::default())"
---
"┌Tree──────────────────────────────────────────────────────────────────────────┐"
"│> root                                                                       ↑│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│   ┌──────────────────────────────────────────────────────────────────────┐  █│"
"│   │                                                                      │  █│"
"│   │ json error:                                                          │  █│"
"│   │ Deserialization error: expected value at line 1 column 2. Lorem      │  █│"
"│   │ ipsum dolor sit amet,consectetur adipiscing elit, sed do eiusmod     │  █│"
"│   │ tempor incididunt ut labore et dolore magnaaliqua.                   │  █│"
"│   │                                                                      │  █│"
"│   │                           continue to edit?                          │  █│"
"│   │                                                                      │  █│"
"│   └─────────────────────────────[Y]es / [N]o─────────────────────────────┘  █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             ↓│"
"└──────────────────────────────────────────────────────────────────────────────┘"
