src/app/component/snapshots/jedit__app__component__workspace__test__render_edit_error_test.snap
---
source: src/app/component/workspace.rs
expression: "stateful_render_to_string(&worktree, &mut WorkSpaceState::default())"
---
"┌Tree──────────────────────────────────────────────────────────────────────────┐"
"│> root                                                                       ↑│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│         ┌JSON Error────────────────────────────────────────────────┐        █│"
"│         │                                                          │        █│"
"│         │ Deserialization error: expected value at line 1 column 2 │        █│"
"│         │                                                          │        █│"
"│         │                     Continue to edit?                    │        █│"
"│         │                                                          │        █│"
"│         └───────────────────────[Y]es / [N]o───────────────────────┘        █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             ↓│"
"└──────────────────────────────────────────────────────────────────────────────┘"
